--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   },
   "dependencies": {
     "@actions/core": "file:toolkit/actions-core-0.0.0.tgz",
-    "@actions/io": "file:toolkit/actions-io-0.0.0.tgz",
     "@actions/exec": "file:toolkit/actions-exec-0.0.0.tgz",
-    "@actions/tool-cache": "file:toolkit/actions-tool-cache-0.0.0.tgz"
+    "@actions/io": "file:toolkit/actions-io-0.0.0.tgz",
+    "@actions/tool-cache": "file:toolkit/actions-tool-cache-0.0.0.tgz",
+    "axios": "^0.19.0",
+    "camelcase-keys": "^6.0.0",
+    "snakecase-keys": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^12.6.8",
